# planetz

./: CMakeLists.txt  README.md  tasks.txt  wishlist.txt
cmake/: FindCEGUIOPENGL.cmake  FindCppUnit.cmake
doc/: doxy.cfg
project/business/: Makefile  business.tex  gantt.sty  gui.tex  history.tex  intro.tex  metric.tex  reqs.tex  schedule.tex  use-case.tex
project/class/: classes.dia
project/diagrams/: activity.dia  classes.dia  cpu_classes.dia  cpu_classes_revisited.dia  databases.dia  gpu_classes.dia
project/diff/: deffered_struct.txt  textures_struct.txt
project/final/: Makefile  desc.tex  diff.tex  final.tex  history.tex  inst.tex  install.tex  metric.tex  schedule.tex  tests.tex  todo
project/inz/: Makefile  arch.tex  bib.tex  declaration.tex  desc_db.tex  desc_gfx.tex  desc_phx.tex  diff_algo.tex  diff_arch.tex  doxy.tex  head.tex  inst.tex  install.tex  intro.tex  inz.bib  inż.tex  sign.tex  streszczenie.tex  strona_tytułowa.tex  tests.tex  theory.tex  titlepage.tex  titlepage_both.tex  titlepage_daniel.tex  titlepage_qba.tex  use-case.tex  work_daniel.tex  work_qba.tex
project/plakat/: plakat.xcf
project/prezka_1/: Makefile  inż_1.tex
project/prezka_1/beamerthemediepen/: AUTHORS  TODO
project/prezka_2/: Makefile  inż_2.tex
project/prezka_3/: Makefile  inż_3.tex
project/tech/: Makefile  activity.tex  algogfx.tex  algophx.tex  class.tex  data.tex  history.tex  intro.tex  metric.tex  sys.tex  t10s.tex  tasks.txt  tech.tex  tests.tex  time.tex  usage.tex
project/use-case/: use-case.dia
src/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  constants.h  main.cpp  options.cpp  options.h  planet.cpp  planet.h  planetz_manager.cpp  planetz_manager.h  saver.cpp  saver.h  window.cpp  window.h
src/cuda/: err.h  math.h  reduce.cu
src/debug/: CMakeLists.txt  planet_printer.cpp  planet_printer.h  routines.h
src/gfx/: CMakeLists.txt  arrow.cpp  arrow.h  background.cpp  background.h  copy_renderer.cpp  copy_renderer.h  deffered_renderer.cpp  deffered_renderer.h  drawable.h  geometry_renderer.cpp  geometry_renderer.h  gfx.cpp  gfx.h  planet.h  planet_gfx.cpp  planetz_picker.cpp  planetz_picker.h  planetz_renderer.cpp  planetz_renderer.h  planetz_tracer.cpp  planetz_tracer.h  shader.cpp  shader.h  texture.cpp  texture.h
src/gpu/: CMakeLists.txt  buffer.h  buffer_cu.hpp  gfx_planet_factory.cpp  gfx_planet_factory.h  holder.cpp  holder.h  holder_user.h  phx_planet_factory.cpp  phx_planet_factory.h  planet.h  planet_model.h
src/gpu_struct/: buffer.h  gfx_planet_factory.cpp  gfx_planet_factory.h  holder.h  holder_user.cpp  holder_user.h  phx_planet_factory.cpp  phx_planet_factory.h  planet.cpp
src/gui/: CMakeLists.txt  gui.cpp  gui.h  layout.cpp  planetzlayout.cpp  planetzlayout.h
src/input/: CMakeLists.txt  driver.cpp  driver.h  input.cpp
src/mem/: CMakeLists.txt  data_flow_mgr.cpp  data_flow_mgr.h  ioctl.cpp  ioctl.h  memory_manager.cpp  memory_manager.h  saver.cpp  saver.h
src/mem/db/: CMakeLists.txt  camera_row.cpp  camera_row.h  db.cpp  db.h  dbsqlite.cpp  dbsqlite.h  materials_row.cpp  materials_row.h  planet_row.cpp  planet_row.h  row.cpp  row.h  rowutils.h  table.h  table_interface.h  textures_row.cpp  textures_row.h
src/mem/misc/: CMakeLists.txt  buffer.h  buffer_cpu.h  buffer_cu.hpp  buffer_gl.h  compacter.cpp  compacter.h  gfx_planet_factory.cpp  gfx_planet_factory.h  holder.cpp  holder.h  holder_cleaner.cu  holder_cleaner.h  holder_cleaner_kernels.cu  holder_cleaner_kernels.h  holder_kernels.cu  holder_kernels.h  materials_manager.cpp  materials_manager.h  phx_planet_factory.cpp  phx_planet_factory.h  planet_model.h  planet_params.h  saver_params.cpp  saver_params.h  textures_manager.h
src/phx/: CMakeLists.txt  kmeans.cu  kmeans.h  kmeans_kernel.cu  model.cpp  model.h  phx.cpp  phx.cu  phx.h  phx_kernels.cu  phx_kernels.h  phx_templates.h  planet.h  planet_phx.cpp
src/sphere/: CMakeLists.txt  sphere.cpp  sphere.h  sphere_converter.cpp  sphere_converter.h  spheremodel.cpp  spheremodel.h
src/ui/: CMakeLists.txt  camera.cpp  camera.h  camera_manager.cpp  camera_manager.h  input_listener.h  planet_tracer.cpp  planet_tracer.h  planetz_picker.cpp  planetz_picker.h  planetz_setter.cpp  planetz_setter.h  ui.cpp  ui.h
src/ui/gui/: CMakeLists.txt  gui.cpp  gui.h  layout.h  planetzlayout.cpp  planetzlayout.h
src/ui/input/: CMakeLists.txt  driver.cpp  driver.h  input.cpp  input.h
src/util/: CMakeLists.txt  animation.h  config.h  locate.cpp  logger.cpp  logger.h  types.h  vector.cpp  vector.h
src/util/timer/: CMakeLists.txt  timer.cpp  timer.h
tasks/: Makefile  gantt.tex  history.tex  metric.tex  schedule.tex
tools/: code_to_save.sh  setgen.cpp
unittest/: CMakeLists.txt  test_main.cpp
unittest/gfx/: CMakeLists.txt  planetz_picker_test.cpp  planetz_picker_test.h  shader_test.cpp  shader_test.h
unittest/mem/: CMakeLists.txt
unittest/mem/misc/: CMakeLists.txt  buffer_test.cpp  buffer_test.h  holder_test.cpp  holder_test.h
unittest/phx/: CMakeLists.txt  phx_test.cpp  phx_test.cu  phx_test.h
unittest/ui/: CMakeLists.txt  planetz_picker_test.cpp  planetz_picker_test.h
unittest/util/: CMakeLists.txt  config_test.cpp  config_test.h
zgloszenie/: Makefile  lameformat.doc  zgloszenie.tex
